--- a/index.html
+++ b/index.html
@@ -321,7 +321,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                                                 </div>
                                             </div>
                                             <div class="pl_cont">
-                                             <span style="color:#00a2ff;">@英国·刘美玲</span> 可以给一下<span class="wuk_name">小张</span>的联系方式吗？最近我们也计划去澳大利亚玩一下。</p>
+                                             <span style="color:#00a2ff;">@新加坡·劉美玲</span> 可以给一下<span class="wuk_name">小张</span>的联系方式吗？最近我们也计划去澳大利亚玩一下。</p>
                                             </div>
                                         </div>
                                     </div>
@@ -336,7 +336,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                                                     <img src="static/picture/1678866467331204.jpg" />
                                                 </div>
                                                 <div class="text">
-                                                    <h2>英国·刘美玲<em>回复</em></h2>
+                                                    <h2>新加坡·劉美玲<em>回复</em></h2>
                                                 </div>
                                             </div>
                                             <div class="pl_cont">
@@ -361,7 +361,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                                                 </div>
                                             </div>
                                             <div class="pl_cont">
-                                                <p><span style="color:#00a2ff;">@英国·刘美玲</span> 微信已加，比网上查询旅游攻略方便了很多，谢谢分享。</p>
+                                                <p><span style="color:#00a2ff;">@新加坡·劉美玲</span> 微信已加，比网上查询旅游攻略方便了很多，谢谢分享。</p>
                                             </div>
                                         </div>
                                     </div>
