--- a/indexhk.html
+++ b/indexhk.html
@@ -321,7 +321,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                                                 </div>
                                             </div>
                                             <div class="pl_cont">
-                                             <span style="color:#00a2ff;">@英國·劉美玲</span> 可以給一下<span class="wuk_name">小張</span>的聯繫方式嗎？最近我們也計劃去澳洲玩一下。</p>
+                                             <span style="color:#00a2ff;">@新加坡·劉美玲</span> 可以給一下<span class="wuk_name">小張</span>的聯繫方式嗎？最近我們也計劃去澳洲玩一下。</p>
                                             </div>
                                         </div>
                                     </div>
@@ -336,7 +336,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                                                     <img src="static/picture/1678866467331204.jpg" />
                                                 </div>
                                                 <div class="text">
-                                                    <h2>英國·劉美玲<em>回覆</em></h2>
+                                                    <h2>新加坡·劉美玲<em>回覆</em></h2>
                                                 </div>
                                             </div>
                                             <div class="pl_cont">
@@ -361,7 +361,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                                                 </div>
                                             </div>
                                             <div class="pl_cont">
-                                                <p><span style="color:#00a2ff;">@英國·劉美玲</span> 微信已加，比網上查詢旅遊攻略方便了很多，謝謝分享。</p>
+                                                <p><span style="color:#00a2ff;">@新加坡·劉美玲</span> 微信已加，比網上查詢旅遊攻略方便了很多，謝謝分享。</p>
                                             </div>
                                         </div>
                                     </div>
