--- a/indexhk.html
+++ b/indexhk.html
@@ -220,8 +220,8 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                                   <p>上週我們一家剛從澳洲旅遊回來，我精簡的分享下親身經歷，如果能抽出幾分鐘耐心看完我這篇文章，一定會讓你去澳洲旅遊少走彎路!</p>
                                   <p style="text-indent:0em;"><img src="static/picture/20250718170623.jpg" /></p>
                                   <p>這次是帶着父母一起去的澳洲，完成了期待已久的全家澳洲之行。</p>
-                              <p>我們一家人從新加坡樟宜機場乘坐新加坡航空，直飛到達悉尼機場，機票非常便宜，飛行時間3.5小時左右</p>
-                              <p>澳洲最大的國際空港在悉尼，並不是首都坎培拉。</p>
+                              <p>我們一家人從新加坡樟宜機場乘坐新加坡航空，直飛到達雪梨機場，機票非常便宜，飛行時間3.5小時左右</p>
+                              <p>澳洲最大的國際空港在雪梨，並不是首都坎培拉。</p>
                                   <p style="text-indent:0em;"><strong>一、去澳洲最佳旅遊方式：自由行。</strong></p>
                                   <p>現在去澳洲自由行的人越來越多，也是目前主流旅遊方式。</p>
                               <p>因為考慮到父母的身體，不太適合走太趕的旅遊團，我們一家人選擇了包車自由行，對比了下跟團遊的費用，沒什麼太大的價格差距，我們果斷選擇包車，方便我們出行。</p>
@@ -230,7 +230,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                                   <p style="text-indent:0em;font-size: 14px;font-weight:bold;color:#d99400;">1、出機場拉客的很多，小心上當受騙。</p>
                                   <p style="text-indent:0em;font-size: 14px;font-weight:bold;color:#d99400;">2、有的酒店前台服務員也在拉客，小心被騙。</p>
                                   <p>有朋友去澳洲自由行，途中遇到拉客的，報的價格很低，承諾的服務也很好，結果第二天跟團就被坑慘了。奉勸大家還是要找當地口碑好的旅遊公司和導遊來安排，穩妥一些。</p>
-                                  <p>飛機到達悉尼機場，當地華人導遊<span class="wuk_name">小張</span>安排的包車已經在機場等候，我們愉快的開啓了澳洲度假模式。</p>
+                                  <p>飛機到達雪梨機場，當地華人導遊<span class="wuk_name">小張</span>安排的包車已經在機場等候，我們愉快的開啓了澳洲度假模式。</p>
                                   <p style="text-indent:0em;font-size: 14px;text-align:center;font-weight:bold;"><img src="static/picture/20257855418.jpg" /></p>
                                   <p style="text-indent:0em;"><strong>二、關於澳洲旅遊簽證</strong></p>
                                   <p>澳洲對大部分國家實行免籤或者落地籤，辦理簽證沒什麼障礙。</p>
@@ -245,11 +245,11 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                                   <p>這麼撩人的國度，不去一下太遺憾了!</p>
                                   <p style="text-indent:0em;"><strong>五、澳洲自由行線路的設計和推薦：</strong></p>
                                   <p>我對澳洲的旅遊定義為體驗式和享受性旅遊，全程適合乘坐舒適性商務車出行，合理的出遊時間最好為8天。。</p>
-                                  <p><b><span class="wuk_name">小张</span>為我們安排的是，澳洲悉尼，墨爾本雙城深度8日遊</b></p>
-                                  <p style="color:#f99202;">第1天：到達澳洲悉尼</p>
-                                  <p style="color:#f99202;">第2天：海關大樓-悉尼歌劇院---悉尼市區歷史文化探尋之旅</p>
-                                  <p style="color:#f99202;">第3天：悉尼小眾遊覽-Taronga Zoo-水上與自然野趣探索之旅</p>
-                                  <p style="color:#f99202;">第4天：悉尼-墨爾本</p>
+                                  <p><b><span class="wuk_name">小张</span>為我們安排的是，澳洲雪梨，墨爾本雙城深度8日遊</b></p>
+                                  <p style="color:#f99202;">第1天：到達澳洲雪梨</p>
+                                  <p style="color:#f99202;">第2天：海關大樓-雪梨歌劇院---雪梨市區歷史文化探尋之旅</p>
+                                  <p style="color:#f99202;">第3天：雪梨小眾遊覽-Taronga Zoo-水上與自然野趣探索之旅</p>
+                                  <p style="color:#f99202;">第4天：雪梨-墨爾本</p>
                                   <p style="color:#f99202;">第5天：墨爾本市區遊覽-墨爾本城市文化與歷史風情探尋之旅</p>
                                   <p style="color:#f99202;">第6天至第7天：墨爾本最美公路——大洋路 大洋路海岸風光之旅</p>
                                   <p style="color:#f99202;">第8天：行程圓滿結束，離開澳洲</p>
@@ -260,14 +260,14 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                                   <p style="text-indent:0em;font-size: 14px;text-align:center;font-weight:bold;"><img src="static/picture/20250718171018.jpg" /></p>
                                   <p><b>2、維多利雅女王大廈(Queensland Victory Building)</b></p>
                                   <p>簡稱QVB，建於19世紀末，最初作為一個市場和城市交易所，這棟百貨Shopping Mall是Mina推薦來雪梨必去的一間，最主要一定要來拍照，非常具有羅馬式建築風格，外觀華麗，內部裝潢精美，到整點的時候百貨中心的時鐘還會報時，一定要去看看，在這棟建築中欣賞到復古的設計、拱形天花板、樓梯和鐘塔，感受到澳洲的歷史和文化。</p>
-                                  <p>推薦景點：澳洲博物館、聖瑪利亞大教堂、新南威爾士美術館、悉尼大學等。</p>
+                                  <p>推薦景點：澳洲博物館、聖瑪利亞大教堂、新南威爾士美術館、雪梨大學等。</p>
                                   <p style="text-indent:0em;font-size: 14px;text-align:center;font-weight:bold;"><img src="static/picture/20250718171140.jpg" /></p>
                              
                                   <p><b>3、岩石區The Rocks</b></p>
                                   <p>The Rocks Market和The Rocks Square是雪梨歷史最悠久的地區之一，也是Mina個人很喜歡的觀光區域，大家稱這裏為「岩石區」，擁有豐富的文化遺產、藝術和手工藝品市集，跟雪梨歌劇院和港城大橋很近，推薦可以安排在同一天觀光。</p> <p>推薦景點：岩石區發現博物館</p>
                                   <p style="text-indent:0em;font-size: 14px;text-align:center;font-weight:bold;"><img src="static/picture/2025071817114650.jpg" /></p>
                                   <p><b>4、Taronga Zoo—塔龍加動物園</b></p>
-                                  <p>Taronga Zoo是悉尼歷史最悠久的動物園，以其壯觀的海港景色和多樣化的動物種類而聞名，澳洲特有的動物，如最知名的：袋鼠、無尾熊、袋熊、袋獾、鴨嘴獸、長頸鹿等。千里迢迢來到澳洲一趟，別錯過了近距離欣賞這些可愛有袋類動物的機會。而且Taronga Zoo的位置是絕佳的拍照打卡的聖地。</p>                                
+                                  <p>Taronga Zoo是雪梨歷史最悠久的動物園，以其壯觀的海港景色和多樣化的動物種類而聞名，澳洲特有的動物，如最知名的：袋鼠、無尾熊、袋熊、袋獾、鴨嘴獸、長頸鹿等。千里迢迢來到澳洲一趟，別錯過了近距離欣賞這些可愛有袋類動物的機會。而且Taronga Zoo的位置是絕佳的拍照打卡的聖地。</p>                                
                                   <p style="text-indent:0em;font-size: 14px;text-align:center;font-weight:bold;"><img src="static/picture/20250718171807.jpg" /></p>
                                   <p><b>5、雅拉河谷熱氣球Yarra Valley</b></p>
                                   <p>澳洲三大葡萄酒產區之一就在墨爾本的亞拉河谷，距離墨爾本CBD 僅1 小時的距離，這裏就像一個天然的露天圓形劇場。
@@ -441,7 +441,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                                 </div>
                                 <div class="con">
                                 <p>蜜月旅行圓滿收官啦，隨性地敲定了去澳洲，現在回味起來依舊覺得妙不可言。從前總以為南半球的國度遙遠又神秘，直到雙腳真正踏上這片土地，才發現所有想象都被溫柔推翻。目之所及是無邊無際的蔚藍海岸線，金黃的沙灘與碧綠的海浪纏綿相擁，內陸的紅土高原上，巨大的岩石在陽光下泛着奇異的光澤。​
-悉尼歌劇院的白色貝殼頂在海風中輕輕 “呼吸”，凱恩斯的大堡礁像打翻了的調色盤，各色珊瑚在透明海水裏招搖。清晨在布里斯班的公園偶遇蹦跳的袋鼠，午後在墨爾本的咖啡館看街頭藝人拉琴，連路邊慵懶曬着太陽的考拉都透着股悠閒勁兒。住過的每間民宿都有主人精心佈置的小細節，吃到的海鮮燴飯裏滿是陽光的味道。</p>
+雪梨歌劇院的白色貝殼頂在海風中輕輕 “呼吸”，凱恩斯的大堡礁像打翻了的調色盤，各色珊瑚在透明海水裏招搖。清晨在布里斯班的公園偶遇蹦跳的袋鼠，午後在墨爾本的咖啡館看街頭藝人拉琴，連路邊慵懶曬着太陽的考拉都透着股悠閒勁兒。住過的每間民宿都有主人精心佈置的小細節，吃到的海鮮燴飯裏滿是陽光的味道。</p>
                                 <p>很幸運的選擇了澳洲，也很幸運遇見了<span class="wuk_name">小張</span>，非常感謝他給我們提供的優質服務，讓我們幸福滿滿，一次難忘的旅程。</p>
                                 <p><img src="static/picture/2025032113150300382.jpg"/></p>
                                 </div>
@@ -536,7 +536,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                                             <div class="pl_cont">
                                                 <p>這次的領隊<span class="wuk_name">小張</span>，熱愛自己的事業，熟知澳洲的風土人情，工作責任心強，關心團友。</p>
                                                 <p>澳洲的行程雖然已圓滿結束，然而我卻又有再次前往的期待。</p>
-                                                <p>悉尼港的白帆與歌劇院的貝殼頂相映成趣，邦迪海灘的浪花捲着雪白的泡沫親吻沙灘；墨爾本的塗鴉巷弄裏，街頭藝術家用色彩在磚牆上繪製着天馬行空的夢境；塔斯馬尼亞的荒原是黛青色的，冰川融水匯成的湖泊像鑲嵌在大地上的藍寶石。</p>
+                                                <p>雪梨港的白帆與歌劇院的貝殼頂相映成趣，邦迪海灘的浪花捲着雪白的泡沫親吻沙灘；墨爾本的塗鴉巷弄裏，街頭藝術家用色彩在磚牆上繪製着天馬行空的夢境；塔斯馬尼亞的荒原是黛青色的，冰川融水匯成的湖泊像鑲嵌在大地上的藍寶石。</p>
                                                 <p>從東海岸的碧海金沙到內陸的紅色荒原，從南澳的葡萄園到北領地的峽谷，每個角落都像被大自然精心調配過色彩，行走其間，彷彿掉進了一幅不斷展開的油畫裏，隨手一拍都是電影級的畫面。</p>
                                                 <p><img src="static/picture/37532220.jpg"/></p>
                                             </div>
