--- a/xcontactx.html
+++ b/xcontactx.html
@@ -15,10 +15,10 @@
 <div>
 <p style="text-align:center;font-weight: 900;">联系我们</p>
 <P style="text-align:center;max_width: 320px;"><img width="320" src="static/picture/wewe.png" /></P>
-<p style="text-align:center;">微信号：<span style="color: red;">MoroccoTrip</span></p>
+<p style="text-align:center;">微信号：<span style="color: red;">Autrip666</span></p>
 <br>
 <p style="text-align:center;font-weight: 900;"><a href="javascript:;" onclick="javascript:history.back(-1)">返回主页</a></p>
-<p style="text-align:center;">Copyright © 2023 zvtravel.com</p>
+<p style="text-align:center;">Copyright © 2025 GOAUtrip.com</p>
 </div>
 </body>
 </html>
