--- a/index.html
+++ b/index.html
@@ -284,7 +284,7 @@
                                   <p style="text-indent:0em;font-size: 14px;text-align:center;font-weight:bold;"><img src="static/picture/202507181711340.jpg" /></p>
      <p><b>伦敦拱桥（London Bridge）</b></p>
                                   <p style="text-indent:0em;font-size: 14px;text-align:center;font-weight:bold;"><img src="static/picture/202507531711340.jpg" /></p>
-                                  <p>此次澳大利亚之行，必须感谢<span class="wuk_name">小张</span>，为我们提供了很大的帮助,细心热情的服务，让全程旅行不用操太多的心，保证了我们度假圆满结束，再给<span class="wuk_name">小张</span>打个广告，<a href="https://mocatrip.com/contact/"><span style="font-weight:bold;color: red;">点击这里联系他</span></a>，有需要的朋友，请联系他。</p>
+                                  <p>此次澳大利亚之行，必须感谢<span class="wuk_name">小张</span>，为我们提供了很大的帮助,细心热情的服务，让全程旅行不用操太多的心，保证了我们度假圆满结束，再给<span class="wuk_name">小张</span>打个广告，<a href="https://autraveling.com/contact/"><span style="font-weight:bold;color: red;">点击这里联系他</span></a>，有需要的朋友，请联系他。</p>
                                 </div>
                                 <div class="copyright"></div>
                                 <div class="a-operate _js_operate clearfix">
