--- a/index.html
+++ b/index.html
@@ -225,13 +225,13 @@
                                   <p style="text-indent:0em;font-size: 14px;font-weight:bold;color:#d99400;">1、出机场拉客的很多，小心上当受骗。</p>
                                   <p style="text-indent:0em;font-size: 14px;font-weight:bold;color:#d99400;">2、有的酒店前台服务员也在拉客，小心被骗。</p>
                                   <p>有朋友去澳大利亚自由行，途中遇到拉客的，报的价格很低，承诺的服务也很好，结果第二天跟团就被坑惨了。奉劝大家还是要找当地口碑好的旅游公司和导游来安排，稳妥一些。</p>
-                                  <p>飞机到达雪梨机场，当地华人导游<span class="wuk_name">小张</span>安排的包车已经在机场等候，我们愉快的开启了澳大利亚度假模式。</p>
+                                  <p>飞机到达雪梨机场，当地华人导游<span class="wuk_name">小刘</span>安排的包车已经在机场等候，我们愉快的开启了澳大利亚度假模式。</p>
                                   <p style="text-indent:0em;font-size: 14px;text-align:center;font-weight:bold;"><img src="static/picture/20257855418.jpg" /></p>
                                   <p style="text-indent:0em;"><strong>二、关于澳大利亚旅游签证</strong></p>
                                   <p>澳大利亚对大部分国家实行免签或者落地签，办理签证没什么障碍。</p>
                                   <p>对持有中国护照的游客免签。我父母来新加坡探亲，持中国护照。所以，很稳妥的入境澳大利亚，没有一丝阻碍。</p>
                                   <p style="text-indent:0em;"><strong>三、关于澳大利亚旅游入境政策要求</strong></p>
-                                  <p>澳大利亚入境，需要提前办理签证，并准备好有效护照、签证确认信、回程机票等文件，在这我推荐找<span class="wuk_name">小张</span>，他预定的酒店不仅价格实惠，基本都处于市中心CBD地段，出行便利，很符合我们全家出行的需求，下面是我入住酒店的照片。</p>                                
+                                  <p>澳大利亚入境，需要提前办理签证，并准备好有效护照、签证确认信、回程机票等文件，在这我推荐找<span class="wuk_name">小刘</span>，他预定的酒店不仅价格实惠，基本都处于市中心CBD地段，出行便利，很符合我们全家出行的需求，下面是我入住酒店的照片。</p>                                
                                   <p style="text-indent:0em;font-size: 14px;text-align:center;font-weight:bold;"><img src="static/picture/20250717161319.jpg" /></p>
                                   <p style="text-indent:0em;"><strong>四、我为什么选择去澳大利亚，爱上它的理由</strong></p>
                                   <p>爱上澳大利亚，理由藏在每一处细节里。保存完好的老建筑让你能亲手触摸到开拓年代的印记，仿佛时光在砖石间低语，过去的故事活了过来。转身遇见旷野，红石头在夕阳下会变红，海浪拍着礁石像在哼歌，风里都是自由的味道。</p>
@@ -240,7 +240,7 @@
                                   <p>这么撩人的国度，不去一下太遗憾了!</p>
                                   <p style="text-indent:0em;"><strong>五、澳大利亚自由行线路的设计和推荐：</strong></p>
                                   <p>我对澳大利亚的旅游定义为体验式和享受性旅游，全程适合乘坐舒适性商务车出行，合理的出游时间最好为8天。。</p>
-                                  <p><b><span class="wuk_name">小张</span>为我们安排的是，澳大利亚雪梨，墨尔本双城深度8日游</b></p>
+                                  <p><b><span class="wuk_name">小刘</span>为我们安排的是，澳大利亚雪梨，墨尔本双城深度8日游</b></p>
                                   <p style="color:#f99202;">第1天：到达澳大利亚雪梨</p>
                                   <p style="color:#f99202;">第2天：海关大楼-雪梨歌剧院---雪梨市区历史文化探寻之旅</p>
                                   <p style="color:#f99202;">第3天：雪梨小众游览-Taronga Zoo-水上与自然野趣探索之旅</p>
@@ -284,7 +284,7 @@
                                   <p style="text-indent:0em;font-size: 14px;text-align:center;font-weight:bold;"><img src="static/picture/202507181711340.jpg" /></p>
      <p><b>伦敦拱桥（London Bridge）</b></p>
                                   <p style="text-indent:0em;font-size: 14px;text-align:center;font-weight:bold;"><img src="static/picture/202507531711340.jpg" /></p>
-                                  <p>此次澳大利亚之行，必须感谢<span class="wuk_name">小张</span>，为我们提供了很大的帮助,细心热情的服务，让全程旅行不用操太多的心，保证了我们度假圆满结束，再给<span class="wuk_name">小张</span>打个广告，<a href="https://autraveling.com/contact/"><span style="font-weight:bold;color: red;">点击这里联系他</span></a>，有需要的朋友，请联系他。</p>
+                                  <p>此次澳大利亚之行，必须感谢<span class="wuk_name">小刘</span>，为我们提供了很大的帮助,细心热情的服务，让全程旅行不用操太多的心，保证了我们度假圆满结束，再给<span class="wuk_name">小刘</span>打个广告，<a href="https://autraveling.com/contact/"><span style="font-weight:bold;color: red;">点击这里联系他</span></a>，有需要的朋友，请联系他。</p>
                                 </div>
                                 <div class="copyright"></div>
                                 <div class="a-operate _js_operate clearfix">
@@ -316,7 +316,7 @@
                                                 </div>
                                             </div>
                                             <div class="pl_cont">
-                                             <span style="color:#00a2ff;">@新加坡·劉美玲</span> 可以给一下<span class="wuk_name">小张</span>的联系方式吗？最近我们也计划去澳大利亚玩一下。</p>
+                                             <span style="color:#00a2ff;">@新加坡·劉美玲</span> 可以给一下<span class="wuk_name">小刘</span>的联系方式吗？最近我们也计划去澳大利亚玩一下。</p>
                                             </div>
                                         </div>
                                     </div>
@@ -335,7 +335,7 @@
                                                 </div>
                                             </div>
                                             <div class="pl_cont">
-                                            <p><span style="color:#00a2ff;">@加拿大-林小惠</span> <span class="wuk_name">小张</span>的微信号 <span class="wuk_weixin">Autrip666</span>,WhatsApp号 <span class="wuk_weixin">+ 61 493 385 079</span></p>
+                                            <p><span style="color:#00a2ff;">@加拿大-林小惠</span> <span class="wuk_name">小刘</span>的微信号 <span class="wuk_weixin">Autrip666</span>,WhatsApp号 <span class="wuk_weixin">+ 61 493 385 079</span></p>
                                             <img src="static/picture/wewhat.jpg">
                                             <p><a href="https://autraveling.com/contact/"><span style="font-weight:bold;color: red;">也可以直接点这里，在线联系，或者留言</span></a></p>
                                             </div>
@@ -375,7 +375,7 @@
                                                 </div>
                                             </div>
                                             <div class="pl_cont">
-                                            <p>我之前去澳大利亚的时候找的就是向导<span class="wuk_name">小张</span>，高端定制游，花钱还不多。</p>
+                                            <p>我之前去澳大利亚的时候找的就是向导<span class="wuk_name">小刘</span>，高端定制游，花钱还不多。</p>
                                             <p>咨询的时候就给我留下了很好的印象，到达澳大利亚后，细节方面，都会有负责人嘱咐，在国外旅游，有个华人导游照顾真的是很省心，一次旅行让你感受到很多种不同的体验。</p>
                                             </div>
                                         </div>
@@ -395,7 +395,7 @@
                                                 </div>
                                             </div>
                                             <div class="pl_cont">
-                                             <p>谢谢你有用的推荐，参加<span class="wuk_name">小张</span>的10天团已经回家了，品质过硬，服务到位!</p>
+                                             <p>谢谢你有用的推荐，参加<span class="wuk_name">小刘</span>的10天团已经回家了，品质过硬，服务到位!</p>
                                             </div>
                                         </div>
                                     </div>
@@ -414,7 +414,7 @@
                                                 </div>
                                             </div>
                                             <div class="pl_cont">
-                                            <p>非常感谢<span class="wuk_name">小张</span>给我们全家人提供的优质服务，陪伴家人、孩子出来旅游一趟，机会非常难得，澳大利亚真值得一去。</p><p>我们采纳了<span class="wuk_name">小张</span>的建议：小车团自由行，一家人单独一台车，私密性强，非常安全。</p></span>
+                                            <p>非常感谢<span class="wuk_name">小刘</span>给我们全家人提供的优质服务，陪伴家人、孩子出来旅游一趟，机会非常难得，澳大利亚真值得一去。</p><p>我们采纳了<span class="wuk_name">小刘</span>的建议：小车团自由行，一家人单独一台车，私密性强，非常安全。</p></span>
                                                 <p><img src="static/picture/31.jpg" /></p>
                                             </div>
                                         </div>
@@ -437,7 +437,7 @@
                                 <div class="con">
                                 <p>蜜月旅行圆满收官啦，随性地敲定了去澳大利亚，现在回味起来依旧觉得妙不可言。从前总以为南半球的国度遥远又神秘，直到双脚真正踏上这片土地，才发现所有想象都被温柔推翻。目之所及是无边无际的蔚蓝海岸线，金黄的沙滩与碧绿的海浪缠绵相拥，内陆的红土高原上，巨大的岩石在阳光下泛着奇异的光泽。​
 雪梨歌剧院的白色贝壳顶在海风中轻轻 “呼吸”，凯恩斯的大堡礁像打翻了的调色盘，各色珊瑚在透明海水里招摇。清晨在布里斯班的公园偶遇蹦跳的袋鼠，午后在墨尔本的咖啡馆看街头艺人拉琴，连路边慵懒晒着太阳的考拉都透着股悠闲劲儿。住过的每间民宿都有主人精心布置的小细节，吃到的海鲜烩饭里满是阳光的味道。</p>
-                                <p>很幸运的选择了澳大利亚，也很幸运遇见了<span class="wuk_name">小张</span>，非常感谢他给我们提供的优质服务，让我们幸福满满，一次难忘的旅程。</p>
+                                <p>很幸运的选择了澳大利亚，也很幸运遇见了<span class="wuk_name">小刘</span>，非常感谢他给我们提供的优质服务，让我们幸福满满，一次难忘的旅程。</p>
                                 <p><img src="static/picture/2025032113150300382.jpg"/></p>
                                 </div>
                                 <div class="copyright"></div>
@@ -489,8 +489,8 @@
                                                 </div>
                                             </div>
                                             <div class="pl_cont">
-                                                <p><span style="color:#00a2ff;">@新加坡·阿飞</span>详细的澳大利亚旅游攻略，我建议还是联系向导<span class="wuk_name">小张</span>，我也是找人家安排的，毕竟人家专业，能给到你详细的旅游规划和报价，这样来的比较直接一些。</p>
-                                                <p><span class="wuk_name">小张</span>的微信号 <span class="wuk_weixin">Autrip666</span>,WhatsApp号 <span class="wuk_weixin">+ 61 493 385 079</span>
+                                                <p><span style="color:#00a2ff;">@新加坡·阿飞</span>详细的澳大利亚旅游攻略，我建议还是联系向导<span class="wuk_name">小刘</span>，我也是找人家安排的，毕竟人家专业，能给到你详细的旅游规划和报价，这样来的比较直接一些。</p>
+                                                <p><span class="wuk_name">小刘</span>的微信号 <span class="wuk_weixin">Autrip666</span>,WhatsApp号 <span class="wuk_weixin">+ 61 493 385 079</span>
                                             </div>
                                         </div>
                                     </div>
@@ -529,7 +529,7 @@
                                                 </div>
                                             </div>
                                             <div class="pl_cont">
-                                                <p>这次的领队<span class="wuk_name">小张</span>，热爱自己的事业，熟知澳大利亚的风土人情，工作责任心强，关心团友。</p>
+                                                <p>这次的领队<span class="wuk_name">小刘</span>，热爱自己的事业，熟知澳大利亚的风土人情，工作责任心强，关心团友。</p>
                                                 <p>澳大利亚的行程虽然已圆满結束，然而我却又有再次前往的期待。</p>
                                                 <p>雪梨港的白帆与歌剧院的贝壳顶相映成趣，邦迪海滩的浪花卷着雪白的泡沫亲吻沙滩；墨尔本的涂鸦巷弄里，街头艺术家用色彩在砖墙上绘制着天马行空的梦境；塔斯马尼亚的荒原是黛青色的，冰川融水汇成的湖泊像镶嵌在大地上的蓝宝石。</p>
                                                 <p>从东海岸的碧海金沙到内陆的红色荒原，从南澳的葡萄园到北领地的峡谷，每个角落都像被大自然精心调配过色彩，行走其间，仿佛掉进了一幅不断展开的油画里，随手一拍都是电影级的画面。</p>
@@ -553,10 +553,10 @@
                                     <a class="level">精彩回复</a>
                                 </div>
                                 <div class="con">
-                                    <p>我是带着爸妈和爷爷去的，跟<span class="wuk_name">小张</span>报的自由行团。因考虑到老人的身体，不敢把行程填太满和太赶，所以这次报的这个团行程比较慢，全程都比较轻松。</p>
+                                    <p>我是带着爸妈和爷爷去的，跟<span class="wuk_name">小刘</span>报的自由行团。因考虑到老人的身体，不敢把行程填太满和太赶，所以这次报的这个团行程比较慢，全程都比较轻松。</p>
                                     <p>线路设计非常合理，爷爷一点感觉不到累，很符合中老年人出行，吃住方面都非常好。</p>
                                     <p>找个澳大利亚当地的负责人为你设计路线，真的是很接地气。</p>
-                                    <p><span class="wuk_name">小张</span>的微信号 <span class="wuk_weixin">Autrip666</span>,WhatsApp号 <span class="wuk_weixin">+ 61 493 385 079</span></p>
+                                    <p><span class="wuk_name">小刘</span>的微信号 <span class="wuk_weixin">Autrip666</span>,WhatsApp号 <span class="wuk_weixin">+ 61 493 385 079</span></p>
                                 </div>
                                 <div class="copyright"></div>
                                 <div class="a-operate _js_operate clearfix">
@@ -588,7 +588,7 @@
                                                 </div>
                                             </div>
                                             <div class="pl_cont">
-                                                <p>刚刚加上<span class="wuk_name">小张</span>的联系方式，开启我们的澳大利亚之旅...</p>
+                                                <p>刚刚加上<span class="wuk_name">小刘</span>的联系方式，开启我们的澳大利亚之旅...</p>
                                             </div>
                                         </div>
                                     </div>
@@ -607,7 +607,7 @@
                                                 </div>
                                             </div>
                                             <div class="pl_cont">
-                                                <p>这次我们参加了澳大利亚之旅，很幸运地遇到了<span class="wuk_name">小张</span>。</p>
+                                                <p>这次我们参加了澳大利亚之旅，很幸运地遇到了<span class="wuk_name">小刘</span>。</p>
                                                 <p>我们老两口年纪比较大，也比较笨，在整个行程中，他每天都会主动关心我们，问候我们有没有需要帮忙的地方。对我们老年游客照顾有加，使我们身在异乡却感受到了感到很温暖，真可谓，不是亲人胜似亲人!</p>
                                                <p><img src="static/picture/2025032115022259976.jpeg"/></p>
                                             </div>
@@ -716,8 +716,16 @@
         alert("感谢评论，稍后将展示！");
     });
     </script>
-        <!-- Google tag (gtag.js) -->
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=AW-17379937313">
+</script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
 
+  gtag('config', 'AW-17379937313');
+</script>
 
 </body>
 
