--- a/index.html
+++ b/index.html
@@ -56,6 +56,10 @@
     <link rel="stylesheet" type="text/css" href="static/css/pc.css" />
     <link href="static/css/layer.css" type="text/css" rel="styleSheet" id="layermcss" />
 <!-- Google Tag Manager -->
+<!-- Event snippet for 網頁檢視 (1) conversion page -->
+<script>
+  gtag('event', 'conversion', {'send_to': 'AW-17379937313/L54GCKn5nfUaEKGYs99A'});
+</script>
 
 <!-- End Google Tag Manager -->
 </head>
