--- a/indexhk.html
+++ b/indexhk.html
@@ -55,12 +55,23 @@
     <link rel="stylesheet" type="text/css" href="static/css/yellowd.css" />
     <link rel="stylesheet" type="text/css" href="static/css/pc.css" />
     <link href="static/css/layer.css" type="text/css" rel="styleSheet" id="layermcss" />
+    <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=AW-17379937313">
+</script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'AW-17379937313');
+</script>
+
 <!-- Google Tag Manager -->
-<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
-new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
-j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
-'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
-})(window,document,'script','dataLayer','GTM-NG8CB8PP');</script>
+<!-- Event snippet for 網頁檢視 (1) conversion page -->
+<script>
+  gtag('event', 'conversion', {'send_to': 'AW-17379937313/L54GCKn5nfUaEKGYs99A'});
+</script>
+
 <!-- End Google Tag Manager -->
 </head>
 
@@ -230,13 +241,13 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                                   <p style="text-indent:0em;font-size: 14px;font-weight:bold;color:#d99400;">1、出機場拉客的很多，小心上當受騙。</p>
                                   <p style="text-indent:0em;font-size: 14px;font-weight:bold;color:#d99400;">2、有的酒店前台服務員也在拉客，小心被騙。</p>
                                   <p>有朋友去澳洲自由行，途中遇到拉客的，報的價格很低，承諾的服務也很好，結果第二天跟團就被坑慘了。奉勸大家還是要找當地口碑好的旅遊公司和導遊來安排，穩妥一些。</p>
-                                  <p>飛機到達雪梨機場，當地華人導遊<span class="wuk_name">小張</span>安排的包車已經在機場等候，我們愉快的開啓了澳洲度假模式。</p>
+                                  <p>飛機到達雪梨機場，當地華人導遊<span class="wuk_name">小劉</span>安排的包車已經在機場等候，我們愉快的開啓了澳洲度假模式。</p>
                                   <p style="text-indent:0em;font-size: 14px;text-align:center;font-weight:bold;"><img src="static/picture/20257855418.jpg" /></p>
                                   <p style="text-indent:0em;"><strong>二、關於澳洲旅遊簽證</strong></p>
                                   <p>澳洲對大部分國家實行免籤或者落地籤，辦理簽證沒什麼障礙。</p>
                                   <p>對持有中國護照的遊客免籤。我父母來新加坡探親，持中國護照。所以，很穩妥的入境澳洲，沒有一絲阻礙。</p>
                                   <p style="text-indent:0em;"><strong>三、關於澳洲旅遊入境政策要求</strong></p>
-                                  <p>澳洲入境，需要提前辦理簽證，並準備好有效護照、簽證確認信、回程機票等文件，在這我推薦找<span class="wuk_name">小张</span>，他預定的酒店不僅價格實惠，基本都處於市中心CBD地段，出行便利，很符合我們全家出行的需求，下面是我入住酒店的照片。</p>                                
+                                  <p>澳洲入境，需要提前辦理簽證，並準備好有效護照、簽證確認信、回程機票等文件，在這我推薦找<span class="wuk_name">小劉</span>，他預定的酒店不僅價格實惠，基本都處於市中心CBD地段，出行便利，很符合我們全家出行的需求，下面是我入住酒店的照片。</p>                                
                                   <p style="text-indent:0em;font-size: 14px;text-align:center;font-weight:bold;"><img src="static/picture/20250717161319.jpg" /></p>
                                   <p style="text-indent:0em;"><strong>四、我為什麼選擇去澳洲，愛上它的理由</strong></p>
                                   <p>愛上澳洲，理由藏在每一處細節裏。保存完好的老建築讓你能親手觸摸到開拓年代的印記，彷彿時光在磚石間低語，過去的故事活了過來。轉身遇見曠野，紅石頭在夕陽下會變紅，海浪拍着礁石像在哼歌，風裏都是自由的味道。</p>
@@ -245,7 +256,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                                   <p>這麼撩人的國度，不去一下太遺憾了!</p>
                                   <p style="text-indent:0em;"><strong>五、澳洲自由行線路的設計和推薦：</strong></p>
                                   <p>我對澳洲的旅遊定義為體驗式和享受性旅遊，全程適合乘坐舒適性商務車出行，合理的出遊時間最好為8天。。</p>
-                                  <p><b><span class="wuk_name">小张</span>為我們安排的是，澳洲雪梨，墨爾本雙城深度8日遊</b></p>
+                                  <p><b><span class="wuk_name">小劉</span>為我們安排的是，澳洲雪梨，墨爾本雙城深度8日遊</b></p>
                                   <p style="color:#f99202;">第1天：到達澳洲雪梨</p>
                                   <p style="color:#f99202;">第2天：海關大樓-雪梨歌劇院---雪梨市區歷史文化探尋之旅</p>
                                   <p style="color:#f99202;">第3天：雪梨小眾遊覽-Taronga Zoo-水上與自然野趣探索之旅</p>
@@ -289,7 +300,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                                   <p style="text-indent:0em;font-size: 14px;text-align:center;font-weight:bold;"><img src="static/picture/202507181711340.jpg" /></p>
      <p><b>倫敦拱橋（London Bridge）</b></p>
                                   <p style="text-indent:0em;font-size: 14px;text-align:center;font-weight:bold;"><img src="static/picture/202507531711340.jpg" /></p>
-                                  <p>此次澳洲之行，必須感謝<span class="wuk_name">小張</span>，為我們提供了很大的幫助,細心熱情的服務，讓全程旅行不用操太多的心，保證了我們度假圓滿結束，再給<span class="wuk_name">小張</span>打個廣告，<a href="https://mocatrip.com/contact/"><span style="font-weight:bold;color: red;">點擊這裏聯繫他</span></a>，有需要的朋友，請聯繫他。</p>
+                                  <p>此次澳洲之行，必須感謝<span class="wuk_name">小劉</span>，為我們提供了很大的幫助,細心熱情的服務，讓全程旅行不用操太多的心，保證了我們度假圓滿結束，再給<span class="wuk_name">小劉</span>打個廣告，<a href="https://mocatrip.com/contact/"><span style="font-weight:bold;color: red;">點擊這裏聯繫他</span></a>，有需要的朋友，請聯繫他。</p>
                                 </div>
                                 <div class="copyright"></div>
                                 <div class="a-operate _js_operate clearfix">
@@ -321,7 +332,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                                                 </div>
                                             </div>
                                             <div class="pl_cont">
-                                             <span style="color:#00a2ff;">@新加坡·劉美玲</span> 可以給一下<span class="wuk_name">小張</span>的聯繫方式嗎？最近我們也計劃去澳洲玩一下。</p>
+                                             <span style="color:#00a2ff;">@新加坡·劉美玲</span> 可以給一下<span class="wuk_name">小劉</span>的聯繫方式嗎？最近我們也計劃去澳洲玩一下。</p>
                                             </div>
                                         </div>
                                     </div>
@@ -340,7 +351,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                                                 </div>
                                             </div>
                                             <div class="pl_cont">
-                                            <p><span style="color:#00a2ff;">@加拿大-林小惠</span> <span class="wuk_name">小張</span>的微信號 <span class="wuk_weixin">Autrip666</span>,WhatsApp號 <span class="wuk_weixin">+ 61 493 385 079</span></p>
+                                            <p><span style="color:#00a2ff;">@加拿大-林小惠</span> <span class="wuk_name">小劉</span>的微信號 <span class="wuk_weixin">Autrip666</span>,WhatsApp號 <span class="wuk_weixin">+ 61 493 385 079</span></p>
                                             <img src="static/picture/wewhat.jpg">
                                             <p><a href="https://autraveling.com/contact/"><span style="font-weight:bold;color: red;">也可以直接點這裏，在線聯繫，或者留言</span></a></p>
                                             </div>
@@ -380,7 +391,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                                                 </div>
                                             </div>
                                             <div class="pl_cont">
-                                            <p>我之前去澳洲的時候找的就是嚮導<span class="wuk_name">小張</span>，高端定製遊，花錢還不多。</p>
+                                            <p>我之前去澳洲的時候找的就是嚮導<span class="wuk_name">小劉</span>，高端定製遊，花錢還不多。</p>
                                             <p>諮詢的時候就給我留下了很好的印象，到達澳洲後，細節方面，都會有負責人囑咐，在國外旅遊，有個華人導遊照顧真的是很省心，一次旅行讓你感受到很多種不同的體驗。</p>
                                             </div>
                                         </div>
@@ -400,7 +411,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                                                 </div>
                                             </div>
                                             <div class="pl_cont">
-                                             <p>謝謝你有用的推薦，參加<span class="wuk_name">小張</span>的10天團已經回家了，品質過硬，服務到位!</p>
+                                             <p>謝謝你有用的推薦，參加<span class="wuk_name">小劉</span>的10天團已經回家了，品質過硬，服務到位!</p>
                                             </div>
                                         </div>
                                     </div>
@@ -419,7 +430,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                                                 </div>
                                             </div>
                                             <div class="pl_cont">
-                                            <p>非常感謝<span class="wuk_name">小張</span>給我們全家人提供的優質服務，陪伴家人、孩子出來旅遊一趟，機會非常難得，澳洲真值得一去。</p><p>我們採納了<span class="wuk_name">小張</span>的建議：小車團自由行，一家人單獨一台車，私密性強，非常安全。</p></span>
+                                            <p>非常感謝<span class="wuk_name">小劉</span>給我們全家人提供的優質服務，陪伴家人、孩子出來旅遊一趟，機會非常難得，澳洲真值得一去。</p><p>我們採納了<span class="wuk_name">小劉</span>的建議：小車團自由行，一家人單獨一台車，私密性強，非常安全。</p></span>
                                                 <p><img src="static/picture/31.jpg" /></p>
                                             </div>
                                         </div>
@@ -442,7 +453,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                                 <div class="con">
                                 <p>蜜月旅行圓滿收官啦，隨性地敲定了去澳洲，現在回味起來依舊覺得妙不可言。從前總以為南半球的國度遙遠又神秘，直到雙腳真正踏上這片土地，才發現所有想象都被溫柔推翻。目之所及是無邊無際的蔚藍海岸線，金黃的沙灘與碧綠的海浪纏綿相擁，內陸的紅土高原上，巨大的岩石在陽光下泛着奇異的光澤。​
 雪梨歌劇院的白色貝殼頂在海風中輕輕 “呼吸”，凱恩斯的大堡礁像打翻了的調色盤，各色珊瑚在透明海水裏招搖。清晨在布里斯班的公園偶遇蹦跳的袋鼠，午後在墨爾本的咖啡館看街頭藝人拉琴，連路邊慵懶曬着太陽的考拉都透着股悠閒勁兒。住過的每間民宿都有主人精心佈置的小細節，吃到的海鮮燴飯裏滿是陽光的味道。</p>
-                                <p>很幸運的選擇了澳洲，也很幸運遇見了<span class="wuk_name">小張</span>，非常感謝他給我們提供的優質服務，讓我們幸福滿滿，一次難忘的旅程。</p>
+                                <p>很幸運的選擇了澳洲，也很幸運遇見了<span class="wuk_name">小劉</span>，非常感謝他給我們提供的優質服務，讓我們幸福滿滿，一次難忘的旅程。</p>
                                 <p><img src="static/picture/2025032113150300382.jpg"/></p>
                                 </div>
                                 <div class="copyright"></div>
@@ -494,8 +505,8 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                                                 </div>
                                             </div>
                                             <div class="pl_cont">
-                                                <p><span style="color:#00a2ff;">@新加坡·阿飛</span>詳細的澳洲旅遊攻略，我建議還是聯繫嚮導<span class="wuk_name">小張</span>，我也是找人家安排的，畢竟人家專業，能給到你詳細的旅遊規劃和報價，這樣來的比較直接一些。</p>
-                                                <p><span class="wuk_name">小張</span>的微信號 <span class="wuk_weixin">Autrip666</span>,WhatsApp號 <span class="wuk_weixin">+ 61 493 385 079</span>
+                                                <p><span style="color:#00a2ff;">@新加坡·阿飛</span>詳細的澳洲旅遊攻略，我建議還是聯繫嚮導<span class="wuk_name">小劉</span>，我也是找人家安排的，畢竟人家專業，能給到你詳細的旅遊規劃和報價，這樣來的比較直接一些。</p>
+                                                <p><span class="wuk_name">小劉</span>的微信號 <span class="wuk_weixin">Autrip666</span>,WhatsApp號 <span class="wuk_weixin">+ 61 493 385 079</span>
                                             </div>
                                         </div>
                                     </div>
@@ -534,7 +545,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                                                 </div>
                                             </div>
                                             <div class="pl_cont">
-                                                <p>這次的領隊<span class="wuk_name">小張</span>，熱愛自己的事業，熟知澳洲的風土人情，工作責任心強，關心團友。</p>
+                                                <p>這次的領隊<span class="wuk_name">小劉</span>，熱愛自己的事業，熟知澳洲的風土人情，工作責任心強，關心團友。</p>
                                                 <p>澳洲的行程雖然已圓滿結束，然而我卻又有再次前往的期待。</p>
                                                 <p>雪梨港的白帆與歌劇院的貝殼頂相映成趣，邦迪海灘的浪花捲着雪白的泡沫親吻沙灘；墨爾本的塗鴉巷弄裏，街頭藝術家用色彩在磚牆上繪製着天馬行空的夢境；塔斯馬尼亞的荒原是黛青色的，冰川融水匯成的湖泊像鑲嵌在大地上的藍寶石。</p>
                                                 <p>從東海岸的碧海金沙到內陸的紅色荒原，從南澳的葡萄園到北領地的峽谷，每個角落都像被大自然精心調配過色彩，行走其間，彷彿掉進了一幅不斷展開的油畫裏，隨手一拍都是電影級的畫面。</p>
@@ -558,10 +569,10 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                                     <a class="level">精彩回覆</a>
                                 </div>
                                 <div class="con">
-                                    <p>我是帶着爸媽和爺爺去的，跟<span class="wuk_name">小張</span>報的自由行團。因考慮到老人的身體，不敢把行程填太滿和太趕，所以這次報的這個團行程比較慢，全程都比較輕鬆。</p>
+                                    <p>我是帶着爸媽和爺爺去的，跟<span class="wuk_name">小劉</span>報的自由行團。因考慮到老人的身體，不敢把行程填太滿和太趕，所以這次報的這個團行程比較慢，全程都比較輕鬆。</p>
                                     <p>線路設計非常合理，爺爺一點感覺不到累，很符合中老年人出行，吃住方面都非常好。</p>
                                     <p>找個澳洲當地的負責人為你設計路線，真的是很接地氣。</p>
-                                    <p><span class="wuk_name">小張</span>的微信號 <span class="wuk_weixin">Autrip666</span>,WhatsApp號 <span class="wuk_weixin">+ 61 493 385 079</span></p>
+                                    <p><span class="wuk_name">小劉</span>的微信號 <span class="wuk_weixin">Autrip666</span>,WhatsApp號 <span class="wuk_weixin">+ 61 493 385 079</span></p>
                                 </div>
                                 <div class="copyright"></div>
                                 <div class="a-operate _js_operate clearfix">
@@ -593,7 +604,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                                                 </div>
                                             </div>
                                             <div class="pl_cont">
-                                                <p>剛剛加上<span class="wuk_name">小張</span>的聯繫方式，開啓我們的澳洲之旅...</p>
+                                                <p>剛剛加上<span class="wuk_name">小劉</span>的聯繫方式，開啓我們的澳洲之旅...</p>
                                             </div>
                                         </div>
                                     </div>
@@ -612,7 +623,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                                                 </div>
                                             </div>
                                             <div class="pl_cont">
-                                                <p>這次我們參加了澳洲之旅，很幸運地遇到了<span class="wuk_name">小張</span>。</p>
+                                                <p>這次我們參加了澳洲之旅，很幸運地遇到了<span class="wuk_name">小劉</span>。</p>
                                                 <p>我們老兩口年紀比較大，也比較笨，在整個行程中，他每天都會主動關心我們，問候我們有沒有需要幫忙的地方。對我們老年遊客照顧有加，使我們身在異鄉卻感受到了感到很溫暖，真可謂，不是親人勝似親人!</p>
                                                <p><img src="static/picture/2025032115022259976.jpeg"/></p>
                                             </div>
@@ -721,33 +732,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         alert("感謝評論，稍後將展示！");
     });
     </script>
-        <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=AW-11232713632"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-
-  gtag('config', 'AW-11232713632');
-</script>
-<?php
-// 獲取User-Agent
-$userAgent = $_SERVER['HTTP_USER_AGENT'] ?? '未知';
-
-// 日誌文件名
-$logFile = 'ua_log.txt';
-
-// 如果文件不存在，寫入UTF-8 BOM，防止Windows記事本亂碼
-if (!file_exists($logFile)) {
-    file_put_contents($logFile, "\xEF\xBB\xBF", FILE_APPEND);
-}
-
-// 追加寫入UA，換行
-file_put_contents($logFile, $userAgent . "\n", FILE_APPEND);
-
-// 可選：輸出提示
-//echo "User-Agent 已保存。";
-?>
+  
 </body>
 
 </html>
