--- a/indexhk.html
+++ b/indexhk.html
@@ -667,7 +667,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         </div>
     </div>
     <div class="mfw-toolbar" id="_j_mfwtoolbar" style="display: block;">
-        <div class="toolbar-item-top" style="display: block;"><p style="font-size: 32px;text-indent:0.2em;"><b><a href="/index"><span style="color:#d99400;">简</span></a></b></p>
+        <div class="toolbar-item-top" style="display: block;"><p style="font-size: 32px;text-indent:0.2em;"><b><a href="/index"><span style="color:#d99400;">简</span><em>返回頂部</em> </a></b></p>
             <a role="button" class="btn _j_gotop"> <i class="fa fa-arrow-up fa-3x" style='color:orange'></i> <em>返回頂部</em> </a>
         </div>
     </div>
