--- a/index.html
+++ b/index.html
@@ -230,8 +230,8 @@
                                   <p>上周我们一家刚从澳大利亚旅游回来，我精简的分享下亲身经历，如果能抽出几分钟耐心看完我这篇文章，一定会让你去澳大利亚旅游少走弯路!</p>
                                   <p style="text-indent:0em;"><img src="static/picture/20250718170623.jpg" /></p>
                                   <p>这次是带着父母一起去的澳大利亚，完成了期待已久的全家澳大利亚之行。</p>
-                              <p>我们一家人从新加坡樟宜机场乘坐新加坡航空，直飞到达雪梨机场，机票非常便宜，飞行时间3.5小时左右。</p>
-                              <p>澳大利亚最大的国际空港在雪梨，并不是首都坎培拉。</p>
+                              <p>我们一家人从新加坡樟宜机场乘坐新加坡航空，直飞到达悉尼机场，机票非常便宜，飞行时间3.5小时左右。</p>
+                              <p>澳大利亚最大的国际空港在悉尼，并不是首都坎培拉。</p>
                                   <p style="text-indent:0em;"><strong>一、去澳大利亚最佳旅游方式：自由行。</strong></p>
                                   <p>现在去澳大利亚自由行的人越来越多，也是目前主流旅游方式。</p>
                               <p>因为考虑到父母的身体，不太适合走太赶的旅游团，我们一家人选择了包车自由行，对比了下跟团游的费用，没什么太大的价格差距，我们果断选择包车，方便我们出行。</p>
@@ -240,7 +240,7 @@
                                   <p style="text-indent:0em;font-size: 14px;font-weight:bold;color:#d99400;">1、出机场拉客的很多，小心上当受骗。</p>
                                   <p style="text-indent:0em;font-size: 14px;font-weight:bold;color:#d99400;">2、有的酒店前台服务员也在拉客，小心被骗。</p>
                                   <p>有朋友去澳大利亚自由行，途中遇到拉客的，报的价格很低，承诺的服务也很好，结果第二天跟团就被坑惨了。奉劝大家还是要找当地口碑好的旅游公司和导游来安排，稳妥一些。</p>
-                                  <p>飞机到达雪梨机场，当地华人导游<span class="wuk_name">小刘</span>安排的包车已经在机场等候，我们愉快的开启了澳大利亚度假模式。</p>
+                                  <p>飞机到达悉尼机场，当地华人导游<span class="wuk_name">小刘</span>安排的包车已经在机场等候，我们愉快的开启了澳大利亚度假模式。</p>
                                   <p style="text-indent:0em;font-size: 14px;text-align:center;font-weight:bold;"><img src="static/picture/20257855418.jpg" /></p>
                                   <p style="text-indent:0em;"><strong>二、关于澳大利亚旅游签证</strong></p>
                                   <p>澳大利亚对大部分国家实行免签或者落地签，办理签证没什么障碍。</p>
@@ -255,29 +255,29 @@
                                   <p>这么撩人的国度，不去一下太遗憾了!</p>
                                   <p style="text-indent:0em;"><strong>五、澳大利亚自由行线路的设计和推荐：</strong></p>
                                   <p>我对澳大利亚的旅游定义为体验式和享受性旅游，全程适合乘坐舒适性商务车出行，合理的出游时间最好为8天。。</p>
-                                  <p><b><span class="wuk_name">小刘</span>为我们安排的是，澳大利亚雪梨，墨尔本双城深度8日游</b></p>
-                                  <p style="color:#f99202;">第1天：到达澳大利亚雪梨</p>
-                                  <p style="color:#f99202;">第2天：海关大楼-雪梨歌剧院---雪梨市区历史文化探寻之旅</p>
-                                  <p style="color:#f99202;">第3天：雪梨小众游览-Taronga Zoo-水上与自然野趣探索之旅</p>
-                                  <p style="color:#f99202;">第4天：雪梨-墨尔本。</p>
+                                  <p><b><span class="wuk_name">小刘</span>为我们安排的是，澳大利亚悉尼，墨尔本双城深度8日游</b></p>
+                                  <p style="color:#f99202;">第1天：到达澳大利亚悉尼</p>
+                                  <p style="color:#f99202;">第2天：海关大楼-悉尼歌剧院---悉尼市区历史文化探寻之旅</p>
+                                  <p style="color:#f99202;">第3天：悉尼小众游览-Taronga Zoo-水上与自然野趣探索之旅</p>
+                                  <p style="color:#f99202;">第4天：悉尼-墨尔本。</p>
                                   <p style="color:#f99202;">第5天：墨尔本市区游览-墨尔本城市文化与历史风情探寻之旅</p>
                                   <p style="color:#f99202;">第6天至第7天：墨尔本最美公路——大洋路 大洋路海岸风光之旅。</p>
                                   <p style="color:#f99202;">第8天：行程圆满结束，离开澳大利亚</p>
                                   </p>
                                   <p style="text-indent:0em;"><strong>六、对澳大利亚网红景点和城市的印象</strong></p>
-                                  <p><b>1、雪梨歌剧院Sydney Opera House</b></p>
-                                  <p>雪梨歌剧院跟港湾大桥就在旁边，是雪梨当地最有名的两大地标，基本上来雪梨「没去这边拍照不算有来过」～雪梨歌剧院是一座建筑奇观，以其独特的帆船形状闻名于世。它是世界上最著名的歌剧院之一，如果你想要深入了解雪梨歌剧院，「雪梨歌剧院一小时的导览」绝对要报名，让你更能了解其背后设计建造的历史，也会带你参观歌剧院内部的厅院，进入歌剧院一般人不会看到的角度欣赏雪梨大桥，连小孩子都能够收获满满的体验。</p>
+                                  <p><b>1、悉尼歌剧院Sydney Opera House</b></p>
+                                  <p>悉尼歌剧院跟港湾大桥就在旁边，是悉尼当地最有名的两大地标，基本上来悉尼「没去这边拍照不算有来过」～悉尼歌剧院是一座建筑奇观，以其独特的帆船形状闻名于世。它是世界上最著名的歌剧院之一，如果你想要深入了解悉尼歌剧院，「悉尼歌剧院一小时的导览」绝对要报名，让你更能了解其背后设计建造的历史，也会带你参观歌剧院内部的厅院，进入歌剧院一般人不会看到的角度欣赏悉尼大桥，连小孩子都能够收获满满的体验。</p>
                                   <p style="text-indent:0em;font-size: 14px;text-align:center;font-weight:bold;"><img src="static/picture/20250718171018.jpg" /></p>
                                   <p><b>2、维多利雅女王大厦(Queensland Victory Building)</b></p>
-                                  <p>简称QVB，建于19世纪末，最初作为一个市场和城市交易所，这栋百货Shopping Mall是Mina推荐来雪梨必去的一间，最主要一定要来拍照，非常具有罗马式建筑风格，外观华丽，内部装潢精美，到整点的时候百货中心的时钟还会报时，一定要去看看，在这栋建筑中欣赏到复古的设计、拱形天花板、楼梯和钟塔，感受到澳大利亚的历史和文化。</p>
-                                  <p>推荐景点：澳大利亚博物馆、圣玛利亚大教堂、新南威尔士美术馆、雪梨大学等。</p>
+                                  <p>简称QVB，建于19世纪末，最初作为一个市场和城市交易所，这栋百货Shopping Mall是Mina推荐来悉尼必去的一间，最主要一定要来拍照，非常具有罗马式建筑风格，外观华丽，内部装潢精美，到整点的时候百货中心的时钟还会报时，一定要去看看，在这栋建筑中欣赏到复古的设计、拱形天花板、楼梯和钟塔，感受到澳大利亚的历史和文化。</p>
+                                  <p>推荐景点：澳大利亚博物馆、圣玛利亚大教堂、新南威尔士美术馆、悉尼大学等。</p>
                                   <p style="text-indent:0em;font-size: 14px;text-align:center;font-weight:bold;"><img src="static/picture/20250718171140.jpg" /></p>
                              
                                   <p><b>3、岩石区The Rocks</b></p>
-                                  <p>The Rocks Market和The Rocks Square是雪梨历史最悠久的地区之一，也是Mina个人很喜欢的观光区域，大家称这里为「岩石区」，拥有丰富的文化遗产、艺术和手工艺品市集，跟雪梨歌剧院和港城大桥很近，推荐可以安排在同一天观光。</p> <p>推荐景点：岩石区发现博物馆</p>
+                                  <p>The Rocks Market和The Rocks Square是悉尼历史最悠久的地区之一，也是Mina个人很喜欢的观光区域，大家称这里为「岩石区」，拥有丰富的文化遗产、艺术和手工艺品市集，跟悉尼歌剧院和港城大桥很近，推荐可以安排在同一天观光。</p> <p>推荐景点：岩石区发现博物馆</p>
                                   <p style="text-indent:0em;font-size: 14px;text-align:center;font-weight:bold;"><img src="static/picture/2025071817114650.jpg" /></p>
                                   <p><b>4、Taronga Zoo—塔龙加动物园</b></p>
-                                  <p>Taronga Zoo是雪梨历史最悠久的动物园，以其壮观的海港景色和多样化的动物种类而闻名，澳大利亚特有的动物，如最知名的：袋鼠、无尾熊、袋熊、袋獾、鸭嘴兽、长颈鹿等。千里迢迢来到澳大利亚一趟，别错过了近距离欣赏这些可爱有袋类动物的机会。而且Taronga Zoo的位置是绝佳的拍照打卡的圣地。</p>                                
+                                  <p>Taronga Zoo是悉尼历史最悠久的动物园，以其壮观的海港景色和多样化的动物种类而闻名，澳大利亚特有的动物，如最知名的：袋鼠、无尾熊、袋熊、袋獾、鸭嘴兽、长颈鹿等。千里迢迢来到澳大利亚一趟，别错过了近距离欣赏这些可爱有袋类动物的机会。而且Taronga Zoo的位置是绝佳的拍照打卡的圣地。</p>                                
                                   <p style="text-indent:0em;font-size: 14px;text-align:center;font-weight:bold;"><img src="static/picture/20250718171807.jpg" /></p>
                                   <p><b>5、雅拉河谷热气球Yarra Valley</b></p>
                                   <p>澳大利亚三大葡萄酒产区之一就在墨尔本的亚拉河谷，距离墨尔本CBD 仅1 小时的距离，这里就像一个天然的露天圆形剧场。
@@ -451,7 +451,7 @@
                                 </div>
                                 <div class="con">
                                 <p>蜜月旅行圆满收官啦，随性地敲定了去澳大利亚，现在回味起来依旧觉得妙不可言。从前总以为南半球的国度遥远又神秘，直到双脚真正踏上这片土地，才发现所有想象都被温柔推翻。目之所及是无边无际的蔚蓝海岸线，金黄的沙滩与碧绿的海浪缠绵相拥，内陆的红土高原上，巨大的岩石在阳光下泛着奇异的光泽。​
-雪梨歌剧院的白色贝壳顶在海风中轻轻 “呼吸”，凯恩斯的大堡礁像打翻了的调色盘，各色珊瑚在透明海水里招摇。清晨在布里斯班的公园偶遇蹦跳的袋鼠，午后在墨尔本的咖啡馆看街头艺人拉琴，连路边慵懒晒着太阳的考拉都透着股悠闲劲儿。住过的每间民宿都有主人精心布置的小细节，吃到的海鲜烩饭里满是阳光的味道。</p>
+悉尼歌剧院的白色贝壳顶在海风中轻轻 “呼吸”，凯恩斯的大堡礁像打翻了的调色盘，各色珊瑚在透明海水里招摇。清晨在布里斯班的公园偶遇蹦跳的袋鼠，午后在墨尔本的咖啡馆看街头艺人拉琴，连路边慵懒晒着太阳的考拉都透着股悠闲劲儿。住过的每间民宿都有主人精心布置的小细节，吃到的海鲜烩饭里满是阳光的味道。</p>
                                 <p>很幸运的选择了澳大利亚，也很幸运遇见了<span class="wuk_name">小刘</span>，非常感谢他给我们提供的优质服务，让我们幸福满满，一次难忘的旅程。</p>
                                 <p><img src="static/picture/2025032113150300382.jpg"/></p>
                                 </div>
@@ -546,7 +546,7 @@
                                             <div class="pl_cont">
                                                 <p>这次的领队<span class="wuk_name">小刘</span>，热爱自己的事业，熟知澳大利亚的风土人情，工作责任心强，关心团友。</p>
                                                 <p>澳大利亚的行程虽然已圆满結束，然而我却又有再次前往的期待。</p>
-                                                <p>雪梨港的白帆与歌剧院的贝壳顶相映成趣，邦迪海滩的浪花卷着雪白的泡沫亲吻沙滩；墨尔本的涂鸦巷弄里，街头艺术家用色彩在砖墙上绘制着天马行空的梦境；塔斯马尼亚的荒原是黛青色的，冰川融水汇成的湖泊像镶嵌在大地上的蓝宝石。</p>
+                                                <p>悉尼港的白帆与歌剧院的贝壳顶相映成趣，邦迪海滩的浪花卷着雪白的泡沫亲吻沙滩；墨尔本的涂鸦巷弄里，街头艺术家用色彩在砖墙上绘制着天马行空的梦境；塔斯马尼亚的荒原是黛青色的，冰川融水汇成的湖泊像镶嵌在大地上的蓝宝石。</p>
                                                 <p>从东海岸的碧海金沙到内陆的红色荒原，从南澳的葡萄园到北领地的峡谷，每个角落都像被大自然精心调配过色彩，行走其间，仿佛掉进了一幅不断展开的油画里，随手一拍都是电影级的画面。</p>
                                                 <p><img src="static/picture/37532220.jpg"/></p>
                                             </div>
@@ -666,7 +666,7 @@
         </div>
     </div>
     <div class="mfw-toolbar" id="_j_mfwtoolbar" style="display: block;">
-        <div class="toolbar-item-top" style="display: block;">
+        <div class="toolbar-item-top" style="display: block;"><p style="font-size: 32px;text-indent:0.1em;"><b><a href="/index" class="btn _j_gotop"><span style="color:#d99400;">繁</span><em>切換繁體</em> </a></b></p>
             <a role="button" class="btn _j_gotop"> <i class="fa fa-arrow-up fa-3x" style='color:orange'></i> <em>返回顶部</em> </a>
         </div>
     </div>
