--- a/index.html
+++ b/index.html
@@ -666,7 +666,7 @@
         </div>
     </div>
     <div class="mfw-toolbar" id="_j_mfwtoolbar" style="display: block;">
-        <div class="toolbar-item-top" style="display: block;"><p style="font-size: 32px;text-indent:0.1em;"><b><a href="/index"  class="btn"><span style="color:#d99400;">繁</span><em>切換繁體</em> </a></b></p>
+        <div class="toolbar-item-top" style="display: block;"><p style="font-size: 32px;text-indent:0.1em;"><b><a href="/indexhk"  class="btn"><span style="color:#d99400;">繁</span><em>切換繁體</em> </a></b></p>
             <a role="button" class="btn _j_gotop"> <i class="fa fa-arrow-up fa-3x" style='color:orange'></i> <em>返回顶部</em> </a>
         </div>
     </div>
