--- a/777.html
+++ b/777.html
@@ -675,17 +675,17 @@
   <div id="wxp-modal" class="wxp-modal">
     <img src="static/picture/success.png" alt="已验证" class="wxp-check-icon">
     <div class="wxp-modal-content">
-      <p class="wxp-title">請掃碼添加微信</p>
+      <p class="wxp-title">请扫码添加微信</p>
       <p class="wxp-wechat-info">
         <img src="static/picture/user.png" alt="微信图标" class="wxp-wechat-icon">
-        <span class="wxp-label">微信號:</span>
+        <span class="wxp-label">WeChat:</span>
         <span class="wxp-wechat-id">Autrip666</span>
       </p>
       <div class="wxp-certified">
-        <span class="wxp-certified-tag">已認證</span>
+        <span class="wxp-certified-tag">已确认</span>
       </div>
       <img src="static/picture/wxwe180.jpg" alt="二维码" class="wxp-qrcode">
-      <p class="wxp-tip">打開微信掃一掃添加微信噢</p>
+      <p class="wxp-tip">打开微信扫一扫添加微信哦</p>
       <button id="wxp-confirm-btn" class="wxp-confirm-btn">确定</button>
     </div>
   </div>
