--- a/indexhk.html
+++ b/indexhk.html
@@ -13,7 +13,7 @@
     <meta name="apple-mobile-web-app-status-bar-style" content="black" />
     <link rel="stylesheet" type="text/css" href="static/css/font-awesome.min.css" />
     <link rel="stylesheet" type="text/css" href="static/css/style.css" />
-     <link rel="stylesheet" type="text/css" href="static/css/elegantstyle.css" />
+    <link rel="stylesheet" type="text/css" href="static/css/elegantstyle.css" />
     <style>
     .wuk_weixin {
     color: #ea0008 !important;
@@ -645,24 +645,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                     </div>
      <div style="text-align:center;width:100%;line-height:30px;font-size:16px;margin-top:20px;bottom:0;">
      Copyright ©2025 <a href="/">zvtravel.com</a> <a href="/xprivacyx.html">隱私聲明</a> <a href="xcontactx.html">聯繫我們</a></div>
-     <!-- 弹窗组件 -->
-  <div id="wxp-overlay" class="wxp-overlay"></div>
-  <div id="wxp-modal" class="wxp-modal">
-    <img src="static/picture/success.png" alt="已验证" class="wxp-check-icon">
-    <div class="wxp-modal-content">
-      <p class="wxp-title">請掃碼添加微信</p>
-      <p class="wxp-wechat-info">
-        <img src="static/picture/user.png" alt="微信图标" class="wxp-wechat-icon">
-        <span class="wxp-label">WeChat:</span>
-        <span class="wxp-wechat-id">Autrip666</span>
-      </p>
-      <div class="wxp-certified">
-        <span class="wxp-certified-tag">已确认</span>
-      </div>
-      <img src="static/picture/wxwe180.jpg" alt="二维码" class="wxp-qrcode">
-      <p class="wxp-tip">打開微信掃一掃添加微信噢</p>
-      <button id="wxp-confirm-btn" class="wxp-confirm-btn">确定</button>
-    </div>
+
        </div> 
                 </div>
         </div>
@@ -687,6 +670,26 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     <div class="mfw-toolbar" id="_j_mfwtoolbar" style="display: block;">
         <div class="toolbar-item-top" style="display: block;">
             <a role="button" class="btn _j_gotop"> <i class="fa fa-arrow-up fa-3x" style='color:orange'></i> <em>返回頂部</em> </a>
+             <div id="wxp-btn-container" class="wxp-btn-container"></div>
+
+                 <!-- 弹窗组件 -->
+  <div id="wxp-overlay" class="wxp-overlay"></div>
+  <div id="wxp-modal" class="wxp-modal">
+    <img src="static/picture/success.png" alt="已验证" class="wxp-check-icon">
+    <div class="wxp-modal-content">
+      <p class="wxp-title">請掃碼添加微信</p>
+      <p class="wxp-wechat-info">
+        <img src="static/picture/user.png" alt="微信图标" class="wxp-wechat-icon">
+        <span class="wxp-label">WeChat:</span>
+        <span class="wxp-wechat-id">Autrip666</span>
+      </p>
+      <div class="wxp-certified">
+        <span class="wxp-certified-tag">已确认</span>
+      </div>
+      <img src="static/picture/wxwe180.jpg" alt="二维码" class="wxp-qrcode">
+      <p class="wxp-tip">打開微信掃一掃添加微信噢</p>
+      <button id="wxp-confirm-btn" class="wxp-confirm-btn">确定</button>
+    </div>
         </div>
     </div>
     <div id="smartGuideFeng" style="left: 0px;">
@@ -694,7 +697,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         <div class="sg-xiaofeng-hide-eye-r-v3"></div>
         <div class="sg-xiaofeng-hide-notice"></div>
     </div>
-    <script src="static/js/script-ft.js"></script>
+    <script src="static/js/scriptft.js"></script>
     <script src="static/js/code_ex2.js"></script>
     <script type="text/javascript" src="static/js/jquery-2.1.1.min.js"></script>
     <script type="text/javascript">
