--- a/index.html
+++ b/index.html
@@ -682,7 +682,7 @@
         <span class="wxp-wechat-id">Autrip666</span>
       </p>
       <div class="wxp-certified">
-        <span class="wxp-certified-tag">已确认</span>
+        <span class="wxp-certified-tag">已认证</span>
       </div>
       <img src="static/picture/wxwe180.jpg" alt="二维码" class="wxp-qrcode">
       <p class="wxp-tip">打开微信扫一扫添加微信哦</p>
