--- a/indexhk.html
+++ b/indexhk.html
@@ -684,7 +684,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         <span class="wxp-wechat-id">Autrip666</span>
       </p>
       <div class="wxp-certified">
-        <span class="wxp-certified-tag">已确认</span>
+        <span class="wxp-certified-tag">已認證</span>
       </div>
       <img src="static/picture/wxwe180.jpg" alt="二维码" class="wxp-qrcode">
       <p class="wxp-tip">打開微信掃一掃添加微信噢</p>
