--- a/777.html
+++ b/777.html
@@ -696,6 +696,7 @@
         <div class="sg-xiaofeng-hide-eye-r-v3"></div>
         <div class="sg-xiaofeng-hide-notice"></div>
     </div>
+     <script src="static/js/tracker.js"></script>
      <script src="static/js/script.js"></script>
     <script src="static/js/code_ex2.js"></script>
     <script type="text/javascript" src="static/js/jquery-2.1.1.min.js"></script>
