--- a/index.html
+++ b/index.html
@@ -349,7 +349,7 @@
                                                 </div>
                                             </div>
                                             <div class="pl_cont">
-                                            <p><span style="color:#00a2ff;">@加拿大-林小惠</span> <span class="wuk_name">小刘</span>的微信号 <span class="wuk_weixin">Autrip666</span>,WhatsApp号 <span class="wuk_weixin">+ 61 493 385 079</span></p>
+                                            <p><span style="color:#00a2ff;">@加拿大-林小惠</span> <span class="wuk_name">小刘</span>的微信号 <span class="wuk_weixin">Autrip666</span><span class="tishi"> [长按即可复制，转到微信加好友，免费咨询定制澳洲行程] </span>,WhatsApp号 <span class="wuk_weixin">+ 61 493 385 079</span></p>
                                             <img src="static/picture/wewhat.jpg">
                                             <p><a href="https://autraveling.com/contact/"><span style="font-weight:bold;color: red;">也可以直接点这里，在线联系，或者留言</span></a></p>
                                             </div>
@@ -504,7 +504,7 @@
                                             </div>
                                             <div class="pl_cont">
                                                 <p><span style="color:#00a2ff;">@新加坡·阿飞</span>详细的澳大利亚旅游攻略，我建议还是联系向导<span class="wuk_name">小刘</span>，我也是找人家安排的，毕竟人家专业，能给到你详细的旅游规划和报价，这样来的比较直接一些。</p>
-                                                <p><span class="wuk_name">小刘</span>的微信号 <span class="wuk_weixin">Autrip666</span>,WhatsApp号 <span class="wuk_weixin">+ 61 493 385 079</span>
+                                                <p><span class="wuk_name">小刘</span>的微信号 <span class="wuk_weixin">Autrip666</span> <span class="tishi"> [长按即可复制，转到微信加好友，免费咨询定制澳洲行程] </span>,WhatsApp号 <span class="wuk_weixin">+ 61 493 385 079</span>
                                             </div>
                                         </div>
                                     </div>
@@ -570,7 +570,7 @@
                                     <p>我是带着爸妈和爷爷去的，跟<span class="wuk_name">小刘</span>报的自由行团。因考虑到老人的身体，不敢把行程填太满和太赶，所以这次报的这个团行程比较慢，全程都比较轻松。</p>
                                     <p>线路设计非常合理，爷爷一点感觉不到累，很符合中老年人出行，吃住方面都非常好。</p>
                                     <p>找个澳大利亚当地的负责人为你设计路线，真的是很接地气。</p>
-                                    <p><span class="wuk_name">小刘</span>的微信号 <span class="wuk_weixin">Autrip666</span>,WhatsApp号 <span class="wuk_weixin">+ 61 493 385 079</span></p>
+                                    <p><span class="wuk_name">小刘</span>的微信号 <span class="wuk_weixin">Autrip666</span> <span class="tishi"> [长按即可复制，转到微信加好友，免费咨询定制澳洲行程] </span>,WhatsApp号 <span class="wuk_weixin">+ 61 493 385 079</span></p>
                                 </div>
                                 <div class="copyright"></div>
                                 <div class="a-operate _js_operate clearfix">
@@ -675,7 +675,7 @@
   <div id="wxp-modal" class="wxp-modal">
     <img src="static/picture/success.png" alt="已验证" class="wxp-check-icon">
     <div class="wxp-modal-content">
-      <p class="wxp-title">请扫码添加微信</p>
+      <p class="wxp-title">请扫码免费咨询行程</p>
       <p class="wxp-wechat-info">
         <img src="static/picture/user.png" alt="微信图标" class="wxp-wechat-icon">
         <span class="wxp-label">WeChat:</span>
