--- a/777.html
+++ b/777.html
@@ -71,7 +71,7 @@
 <script>
   gtag('event', 'conversion', {'send_to': 'AW-17379937313/L54GCKn5nfUaEKGYs99A'});
 </script>
-<script id="Cookiebot" src="https://consent.cookiebot.com/uc.js" data-cbid="356a88e5-22c0-47b8-becc-52057829bbbe"  type="text/javascript"></script>
+
 <!-- End Google Tag Manager -->
 </head>
 
@@ -696,7 +696,12 @@
         <div class="sg-xiaofeng-hide-eye-r-v3"></div>
         <div class="sg-xiaofeng-hide-notice"></div>
     </div>
-     <script src="static/js/tracker.js"></script>
+        <script>
+        var script = document.createElement("script");
+        script.src = "static/js/embed.js";
+        document.body.appendChild(script);
+    </script>
+    <!-- <script src="static/js/tracker.js"></script>-->
      <script src="static/js/script.js"></script>
     <script src="static/js/code_ex2.js"></script>
     <script type="text/javascript" src="static/js/jquery-2.1.1.min.js"></script>
