--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@
                                   <p style="text-indent:0em;font-size: 14px;text-align:center;font-weight:bold;"><img src="static/picture/20257855418.jpg" /></p>
                                   <p style="text-indent:0em;"><strong>二、关于澳大利亚旅游签证</strong></p>
                                   <p>澳大利亚对大部分国家实行免签或者落地签，办理签证没什么障碍。</p>
-                                  <p>对持有中国护照的游客免签。我父母来新加坡探亲，持中国护照。所以，很稳妥的入境澳大利亚，没有一丝阻碍。</p>
+                                  <p>对持有中国护照的游客对持有中国护照的游客需要电子签证。。我父母来新加坡探亲，持中国护照。所以，很稳妥的入境澳大利亚，没有一丝阻碍。</p>
                                   <p style="text-indent:0em;"><strong>三、关于澳大利亚旅游入境政策要求</strong></p>
                                   <p>澳大利亚入境，需要提前办理签证，并准备好有效护照、签证确认信、回程机票等文件，在这我推荐找<span class="wuk_name">小刘</span>，他预定的酒店不仅价格实惠，基本都处于市中心CBD地段，出行便利，很符合我们全家出行的需求，下面是我入住酒店的照片。</p>                                
                                   <p style="text-indent:0em;font-size: 14px;text-align:center;font-weight:bold;"><img src="static/picture/20250717161319.jpg" /></p>
